2005-01-13 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Pango/Enums.chs.pp: fix whitespace problem that
	caused compile failure.

2005-01-12 Axel Simon <A.Simon@kent.ac.uk>

	* Makefile.am, gtk/Graphics/UI/Gtk/Pango/Rendering.chs.pp,
	gtk/Graphics/UI/Gtk/Pango/Enums.chs.pp: Renames both files from
	.chs to .chs.pp and changed the Makefile accordingly. Preprocessing
	is now necessary to accommodate the lack of some enum names in
	Gtk 2.2.

	* tools/hierarchyGen/hierarchy.list: Only create the FileChooser
	interface object when building for Gtk 2.4 or higher.

2005-01-12 Duncan Coutts <duncan@coutts.uklinux.net>

	* demo/hello/World.hs: update to work with the new module names.

	* demo/hello/Makefile: a simple makefile. The old makefile relied on
	the old build system. This makefile will not build in-place it
	requires everything to be installed.

	* tools/apiGen/ApiGen.hs, tools/apiGen/format-docs.xsl,
	tools/apiGen/gen-all.sh, tools/apiGen/Template.chs: add support for
	documentation of function arguments. It's mostly and improvement I
	think though it does add a lot of extra stuff to the final
	documentation. On the other hand the gtk documentation for functions
	often refer to argument names so the generated haddoc docs make more
	sense now.

2005-01-11 Duncan Coutts <duncan@coutts.uklinux.net>

	* glib/glib.pkg.in, gtk/gtk.pkg.in, mogul/mogul.pkg.in,
	glade/glade.pkg.in, gconf/gconf.pkg.in, sourceview/sourceview.pkg.in,
	mozembed/mozembed.pkg.in: correct import_dirs. Each module has its own
	directory under the hi difrectory. Also, since all packages now use
	the hierachrical module namespace we can install all packages as 'Auto'
	packages which means that users do not have to specify -package to ghc
	most of the time.

	* Makefile.am: correct the install location for glib package's .hi
	files. Correct a linker error caused by a missing _stub.o file.
	Everything should install correctly now and the demos should build ok.
